force-app/main/default/objects/leaseworks__Engine_Base_Price__c/leaseworks__Engine_Base_Price__c.object-meta.xml
<CustomObject>
    <label>Engine Base Price</label>
    <nameField>
        <label>Engine Base Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engine Base Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>