force-app/main/default/objects/leaseworks__Engine_Base_Price__c/fields/leaseworks__Base_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Reference_Date__c</fullName>
    <label>Base Reference Date</label>
    <type>Date</type>
</CustomField>