force-app/main/default/objects/leaseworks__Engine_Base_Price__c/fields/leaseworks__Base_Reference_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Reference_Price__c</fullName>
    <label>Base Reference Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>