force-app/main/default/objects/leaseworks__Engine_Base_Price__c/fields/leaseworks__BRA_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__BRA_F__c</fullName>
    <label>Base Reference Allowance Factor</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>