force-app/main/default/objects/leaseworks__Engine_Base_Price__c/fields/leaseworks__Engine_Base_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Base_Net_Price__c</fullName>
    <formula>IF (RecordType.DeveloperName = &apos;PW&apos;, (leaseworks__Price__c * leaseworks__BP_F__c) - ((leaseworks__Allowance__c / leaseworks__BRA_F__c) * leaseworks__BP_F__c) , leaseworks__Price__c - leaseworks__Allowance__c)</formula>
    <label>Engine Base Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>