force-app/main/default/objects/leaseworks__Engine_Base_Price__c/recordTypes/leaseworks__CFM.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__CFM</fullName>
    <active>true</active>
    <label>CFM</label>
</RecordType>