force-app/main/default/objects/leaseworks__Engine_Base_Price__c/recordTypes/leaseworks__PW.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__PW</fullName>
    <active>true</active>
    <label>PW</label>
</RecordType>