force-app/main/default/objects/leaseworks__Engine_Base_Price__c/recordTypes/leaseworks__Rolls_Roys.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Rolls_Roys</fullName>
    <active>true</active>
    <label>Rolls-Royce</label>
</RecordType>