force-app/main/default/objects/leaseworks__Engine_Base_Price__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Order__c</columns>
    <columns>leaseworks__Aircraft_Type__c</columns>
    <columns>leaseworks__Manufacturer__c</columns>
    <columns>leaseworks__Base_Reference_Date__c</columns>
    <columns>leaseworks__Base_Reference_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>